--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
+    "draft-js": "^0.11.7",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
+    "immutability-helper": "^3.1.1",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.1.1",
     "react-slick": "^0.29.0",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.2",
-    "typewriter-effect": "^2.20.1"
+    "typewriter-effect": "^2.20.1",
+    "yup": "^1.2.0"
   }
 }
