--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
+    "react-verification-input": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.21.0",
     "yup": "^1.3.2"
