--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@reduxjs/toolkit": "^1.9.7",
+    "@reduxjs/toolkit": "^2.0.1",
     "@tailwindcss/forms": "^0.5.7",
     "aos": "^2.3.4",
-    "cssnano": "^6.0.1",
+    "cssnano": "^6.0.2",
     "dayjs": "^1.11.10",
     "dompurify": "^3.0.6",
     "draft-js": "^0.11.7",
     "formik": "^2.4.5",
-    "framer-motion": "^10.16.12",
+    "framer-motion": "^10.16.16",
     "immutability-helper": "^3.1.1",
-    "next": "14.0.3",
+    "next": "14.0.4",
     "postcss-import": "^15.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-image-gallery": "^1.3.0",
     "react-quill": "^2.0.0",
-    "react-redux": "^8.1.3",
+    "react-redux": "^9.0.4",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
@@ -35,11 +35,13 @@
     "react-verification-input": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.21.0",
-    "yup": "^1.3.2"
+    "wavesurfer-react": "^3.0.1",
+    "wavesurfer.js": "^7.5.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "10.4.16",
     "postcss": "8.4.32",
-    "tailwindcss": "3.3.5"
+    "tailwindcss": "3.4.0"
   }
 }
